# cpp-tasks

./: .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
chapter1/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
chapter2/: 0.cpp  1.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
chapter3/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
chapter4/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  test.cpp
chapter5/:  4.cpp  1.cpp  2.cpp  3.cpp  5.cpp  CMakeLists.txt
chapter5/src/: 1.cpp  2.cpp  3.cpp  5.cpp  crtp.cpp
include/chapter5/: complex_number.h  parallelepiped.h  task1.h  task2.h  task3.h  task4.h  task5.h  vector.h
src/chapter5/: crtp.cpp
test/: CMakeLists.txt  chapter5_test.cpp
